Update: delete and add images and updeate indec.html

--- a/index.html
+++ b/index.html
@@ -87,16 +87,16 @@
         </div>
         <p>
           <span>
-            <a href=""><i class="fab fa-git-square    "></i></a>
+            <a href="https://github.com/nez-uko"><i class="fab fa-git-square    "></i></a>
           </span>
           <span>
-            <a href=""><i class="fab fa-linkedin    "></i></a>
+            <a href="www.linkedin.com/in/safaa-abdelkhaleq"><i class="fab fa-linkedin    "></i></a>
           </span>
           <span>
-            <a href=""><i class="fab fa-facebook    "></i></a>
+            <a href="https://www.facebook.com/share/18rbo88VKh/"><i class="fab fa-facebook    "></i></a>
           </span>
           <span>
-            <i class="fab fa-whatsapp    "></i>
+           <a href="https://wa.me/01033452865"> <i class="fab fa-whatsapp    "></i></a>
           </span>
         </p>
       </div>
@@ -198,8 +198,8 @@
         </div>
         <div class="project-card">
           <div class="project-cover">
-            <img src="images/Screenshot (82).png" alt="AXit Project">
-            <div class="card-layout d-flex"><button><a href="https://nez-uko.github.io/Tradix_Template/">View
+            <img src="images/Screenshot (94).png" alt="AXit Project">
+            <div class="card-layout d-flex"><button><a href="https://nez-uko.github.io/Portofilio/">View
                   Projects</a></button>
             </div>
           </div>
@@ -287,7 +287,7 @@
               <span><i class="fas fa-envelope    "></i></span>
               <p>
                 <span>Email</span>
-                <span>safaa3bdelkhale@gmail.com</span>
+                <span><a href="mailto:safaa3bdelkhalek@gmail.com">safaa3bdelkhale@gmail.com</a></span>
               </p>
             </div>
 
@@ -296,8 +296,8 @@
           <div class="follow-me">
             <h4>Follow Me</h4>
             <div>
-              <span><a href=""><i class="fab fa-github    "></i></a></span>
-              <span><a href=""><i class="fab fa-linkedin    "></i></a></span>
+              <span><a href="https://github.com/nez-uko"><i class="fab fa-github    "></i></a></span>
+              <span><a href="https://www.linkedin.com/in/safaa-abdelkhaleq?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app "><i class="fab fa-linkedin    "></i></a></span>
             </div>
           </div>
         </div>
