--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
           </p>
           <p>
             <i class="fas fa-envelope    "></i>
-            <span>safaa3bdelkhale@gmail.com</span>
+            <span>example@gmail.com</span>
           </p>
           <p>
             <i class="fas fa-phone    "></i>
-            <span>+201033452865</span>
+            <span>+2010000000</span>
           </p>
           <p>
             <i class="fas fa-location-arrow    "></i>
@@ -90,13 +90,13 @@
             <a href="https://github.com/nez-uko"><i class="fab fa-git-square    "></i></a>
           </span>
           <span>
-            <a href="www.linkedin.com/in/safaa-abdelkhaleq"><i class="fab fa-linkedin    "></i></a>
+            <a href=""><i class="fab fa-linkedin    "></i></a>
           </span>
           <span>
-            <a href="https://www.facebook.com/share/18rbo88VKh/"><i class="fab fa-facebook    "></i></a>
+            <a href=""><i class="fab fa-facebook    "></i></a>
           </span>
           <span>
-           <a href="https://wa.me/01033452865"> <i class="fab fa-whatsapp    "></i></a>
+           <a href=""> <i class="fab fa-whatsapp    "></i></a>
           </span>
         </p>
       </div>
@@ -148,8 +148,7 @@
           <div class="project-cover">
             <img src="images/Screenshot (78).png" alt="anime project">
             <div class="card-layout d-flex">
-              <button><a href="https://nez-uko.github.io/OtakuHaven/">View Projects</a></button>
-
+              <button><a href=" https://nez-uko.github.io/OtakuHaven/">View Projects</a></button>
             </div>
           </div>
           <div class="project-detail">
@@ -166,8 +165,8 @@
         <div class="project-card">
           <div class="project-cover">
             <img src="images/Screenshot (77).png" alt="Tradix project">
-            <div class="card-layout d-flex"> <button><a href="https://nez-uko.github.io/Tradix_Template/">View
-                  Projects</a></button>
+            <div class="card-layout d-flex"> <button><a href=" https://nez-uko.github.io/Tradex_Templete/">View
+                  Projects</a></button>  
             </div>
           </div>
           <div class="project-detail">
@@ -279,7 +278,7 @@
               <span><i class="fas fa-phone    "></i></span>
               <p>
                 <span>Phone</span>
-                <span>+201033452865</span>
+                <span>+201000000</span>
               </p>
             </div>
 
@@ -287,7 +286,7 @@
               <span><i class="fas fa-envelope    "></i></span>
               <p>
                 <span>Email</span>
-                <span><a href="mailto:safaa3bdelkhalek@gmail.com">safaa3bdelkhale@gmail.com</a></span>
+                <span><a href="mailto:example@gmail.com">example@gmail.com</a></span>
               </p>
             </div>
 
@@ -297,7 +296,7 @@
             <h4>Follow Me</h4>
             <div>
               <span><a href="https://github.com/nez-uko"><i class="fab fa-github    "></i></a></span>
-              <span><a href="https://www.linkedin.com/in/safaa-abdelkhaleq?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app "><i class="fab fa-linkedin    "></i></a></span>
+              <span><a href=""><i class="fab fa-linkedin    "></i></a></span>
             </div>
           </div>
         </div>
